# agora

./: Dockerfile  README.md  docker-compose.yml
agora_lang_compiler/: .gitignore  Makefile  ast.ml  code_gen.ml  example.agora  lexer.mll  main.ml  parser.mly
agora_lang_compiler/examples/: code_gen.agora  simple_token.agora  syntax.agora
agora_traveler/: Dockerfile  docker-compose.yml  main.py
agora_traveler/templates/: account-consensus.html  consensus.html  index.html  navbar.html
core/: Dockerfile  docker-compose.yml
core/lib/: block.ml  block.mli  dune  log.ml  node.ml  node.mli  pow.ml  pow.mli  state.ml  state.mli  transaction.ml  transaction.mli
core/test/: dune
core_protocol/: Dockerfile  docker-compose.yml
core_protocol/core/: dune-project
core_protocol/database/: Cargo.toml
core_protocol/virtual_machine/: Cargo.toml
core_protocol/virtual_machine/src/: lib.rs
core_protocol/virtual_machine/src/jsonrpc/: mod.rs
core_protocol/virtual_machine/src/u256/: mod.rs
core_protocol/virtual_machine/src/vm/: event.rs  instruction.rs  log.rs  mod.rs  ocaml_callback.rs  server.rs  vm_core.rs
database/: Cargo.toml  cbindgen.toml
database/src/: lib.rs  main.rs
docs/: README.md  agora_lang.txt  core.md  core.txt  todo.txt
explorer/: docker-compose.yml  main.py
explorer/templates/: account-consensus.html  account.html  (+3 more)
node_explorer/: Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.json
vm_debugger/: Cargo.toml
vm_debugger/examples/: code_gen.ag
vm_debugger/src/: main.rs
wallet/: docker-compose.yml  main.py
(+44 files in other folders)
