[package]
name = "vm_debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
virtual_machine = { path = "../core_protocol/virtual_machine" }
rustyline = "11.0.0"
uuid = { version = "1.10.0"}
ethnum = { version = "1.5.0"}