[package]
name = "virtual_machine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
ocaml-sys = "0.24.0"
tokio = { version = "1.40.0", features = ["full"] }
uuid = "1.10.0"
