[package]
name = "virtual_machine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
ocaml-sys = "0.24.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
ethnum = { version = "1.5.0", features = ["serde"] }
hex = "0.4.3"
sha2 = "0.10.8"
